syntax = "proto3";

package bluetooth;

service BluetoothService {
    rpc GetBluetoothStatus (Empty) returns (BluetoothStatus);
    rpc EnableBluetooth (Empty) returns (EmptyResponse);
    rpc DisableBluetooth (Empty) returns (EmptyResponse);
}

message Empty {}

message EmptyResponse {}

message BluetoothStatus {
    bool enabled = 1;
}
